--- a/src/web/views/sites/main/index.ejs
+++ b/src/web/views/sites/main/index.ejs
@@ -4,14 +4,40 @@
     <link rel="stylesheet" href="/main/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        body {
+            background-color: #D0D9FF;
+        }
+        #header-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between; /* Alokacja przestrzeni między elementami */
+        }
+        #main-content h1 {
+            margin: 0 auto; /* Centrowanie tytułu w dostępnej przestrzeni */
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<div id="main-content">
-    <h1><%= siteName %> - Home</h1>
-    <div id="nodepress-content">
-        <% for(let block of blocks){ %>
-            <%- block.render(); %>
-        <% } %>
+<div class="container">
+    <div id="header-content">
+        <div class="col-auto">
+            <img src="https://i.imgur.com/LEnaOX3.png" alt="Logo" style="height: 125px;">
+        </div>
+        <h1><%= siteName %> - Home</h1>
+        <div class="col-auto"> <!-- Puste miejsce, aby h1 pozostał wyśrodkowany -->
+        </div>
+    </div>
+    <div id="main-content">
+        <div id="nodepress-content">
+            <% for(let block of blocks){ %>
+                <%- block.render(); %>
+            <% } %>
+        </div>
+    </div>
+    <div class="text-center mt-4">
+        <a href="/admin" class="btn btn-secondary">Back to Admin</a>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
